--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "http://hieule96.github.io/"
+baseURL: "https://hieule96.github.io/blog/"
 languageCode: "en-us"
 title: "Heavenly Tech"
 theme: "PaperMod"
